--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
           <p class="footer footer__column-heading">Соцсети</p>
           <p class="footer footer__column-links">
             <a class="footer footer__column-link" href="#">
-              <img class="footer__footer-icon" alt="Facebook" src="./images/facebook_color_white.svg">&nbsp; Facebook</a>
+              <img class="footer__footer-icon" alt="Фэйсбук" src="./images/facebook_color_white.svg">&nbsp; Facebook</a>
             <a class="footer footer__column-link" href="#">
-              <img class="footer__footer-icon" alt="Facebook" src="./images/vk_color_white.svg">&nbsp; ВКонтакте</a>
+              <img class="footer__footer-icon" alt="ВКонтакте" src="./images/vk_color_white.svg">&nbsp; ВКонтакте</a>
             <a class="footer footer__column-link" href="#">
-              <img class="footer__footer-icon" alt="Facebook" src="./images/instagram_color_white.svg">&nbsp; Instagram</a>
+              <img class="footer__footer-icon" alt="Инстаграм" src="./images/instagram_color_white.svg">&nbsp; Instagram</a>
           </p>
         </div>        
       </div>
