--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             
            
           </ul>  
-          <div class="kaufman__triangle rotation"></div>   -->
+          <div class="kaufman__triangle rotation"></div>   
    
       </section>   
       <section class="resources">
@@ -325,5 +325,3 @@
   </div>
 </body>
 </html>
-
- <!--  <img alt="Синий треугольник" class="kaufman__triangle rotation" src="./images/kaufman-triangle.svg">  -->
